testdata/baselines/reference/submodule/compiler/parseJsxElementInUnaryExpressionNoCrash1.errors.txt
a.js(2,1): error TS1005: '>' expected.


==== a.js (1 errors) ====
    ~< <
    
    
!!! error TS1005: '>' expected.